--- a/Java_MVP/app/src/main/res/layout/fragment_user_detail.xml
+++ b/Java_MVP/app/src/main/res/layout/fragment_user_detail.xml
@@ -3,17 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:clickable="true"
+    android:focusable="true">
 
     <View
         android:id="@+id/view1"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/colorPrimary"
+        app:layout_constraintBottom_toTopOf="@id/view2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/view2"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <View
@@ -31,43 +33,43 @@
         android:layout_width="190dp"
         android:layout_height="220dp"
         app:cardBackgroundColor="@color/colorCardViewBg"
-        app:cardPreventCornerOverlap="true"
         app:cardCornerRadius="4dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:cardPreventCornerOverlap="true"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
 
-       <androidx.constraintlayout.widget.ConstraintLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-           <androidx.appcompat.widget.AppCompatImageView
-               android:id="@+id/image"
-               android:layout_width="0dp"
-               android:layout_height="160dp"
-               tools:srcCompat="@drawable/ic_launcher_background"
-               tools:scaleType="centerCrop"
-               app:layout_constraintTop_toTopOf="parent"
-               app:layout_constraintEnd_toEndOf="parent"
-               app:layout_constraintStart_toStartOf="parent" />
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/image"
+                android:layout_width="0dp"
+                android:layout_height="160dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:scaleType="centerCrop"
+                tools:srcCompat="@drawable/ic_launcher_background" />
 
-           <androidx.appcompat.widget.AppCompatTextView
-               android:id="@+id/txt_fullname"
-               android:layout_width="0dp"
-               android:layout_height="wrap_content"
-               style="@style/TextStyle.Text_H3"
-               android:layout_marginTop="@dimen/default_margin"
-               android:layout_marginStart="@dimen/default_margin"
-               android:layout_marginEnd="@dimen/default_margin"
-               app:layout_constraintTop_toBottomOf="@id/image"
-               app:layout_constraintStart_toStartOf="parent"
-               app:layout_constraintEnd_toEndOf="parent"
-               tools:text="GoTo Inc."
-               android:singleLine="true"
-               android:ellipsize="marquee" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/txt_fullname"
+                style="@style/TextStyle.Text_H3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginTop="@dimen/default_margin"
+                android:layout_marginEnd="@dimen/default_margin"
+                android:ellipsize="marquee"
+                android:singleLine="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/image"
+                tools:text="GoTo Inc." />
 
-       </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
